--- a/templates/page.html
+++ b/templates/page.html
@@ -4,52 +4,53 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title></title>
-    <link rel="icon" type="image/x-icon" href="@root/static/favicon.ico">
-    <link rel="stylesheet" href="@root/static/mccole.css" type="text/css">
+    <link rel="icon" type="image/x-icon" href="@/static/favicon.ico">
+    <link rel="stylesheet" href="@/static/mccole.css" type="text/css">
   </head>
   <body>
     <nav>
-      <a href="@root/">Home</a>
+      <a href="@/">Home</a>
       &middot;
       <span class="dropdown">
 	<a href="#">Lessons</a>
 	<span class="dropdown-content">
-          <a href="@root/01_intro/">Introduction</a>
-          <a href="@root/02_htmlcss/">HTML and CSS</a>
-          <a href="@root/03_js/">An Hour of JavaScript</a>
-          <a href="@root/04_browser/">JavaScript in the Browser</a>
-          <a href="@root/05_http/">HTTP</a>
-          <a href="@root/06_server/">A Server</a>
-          <a href="@root/07_db/">Using a Database</a>
-          <a href="@root/08_test/">Testing the Server</a>
-          <a href="@root/09_view/">Serving HTML</a>
-          <a href="@root/10_forms/">Using Forms</a>
-          <a href="@root/11_htmx/">Using HTMX</a>
-          <a href="@root/12_migrate/">Database Migration</a>
-          <a href="@root/13_auth/">Authentication</a>
-          <a href="@root/14_automate/">Testing in the Browser</a>
-          <a href="@root/15_crypt/">Encryption</a>
-          <a href="@root/16_upload/">Uploading Files</a>
-          <a href="@root/17_log/">Logging and Auditing</a>
-          <a href="@root/18_perm/">Permissions</a>
-          <a href="@root/19_access/">Accessibility</a>
-          <a href="@root/20_gui/">A Graphical User Interface</a>
-          <a href="@root/21_graphics/">Dynamic Graphics</a>
-          <a href="@root/22_intl/">Internationalization</a>
-          <a href="@root/23_sessions/">Sessions</a>
-          <a href="@root/24_cache/">Caching</a>
+          <a href="@/01_intro/">Introduction</a>
+          <a href="@/02_htmlcss/">HTML and CSS</a>
+          <a href="@/03_js/">An Hour of JavaScript</a>
+          <a href="@/04_browser/">JavaScript in the Browser</a>
+          <a href="@/05_http/">HTTP</a>
+          <a href="@/06_server/">A Server</a>
+          <a href="@/07_db/">Using a Database</a>
+          <a href="@/08_test/">Testing the Server</a>
+          <a href="@/09_view/">Serving HTML</a>
+          <a href="@/10_forms/">Using Forms</a>
+          <a href="@/11_htmx/">Using HTMX</a>
+          <a href="@/12_migrate/">Database Migration</a>
+          <a href="@/13_auth/">Authentication</a>
+          <a href="@/14_automate/">Testing in the Browser</a>
+          <a href="@/15_crypt/">Encryption</a>
+          <a href="@/16_upload/">Uploading Files</a>
+          <a href="@/17_log/">Logging and Auditing</a>
+          <a href="@/18_perm/">Permissions</a>
+          <a href="@/19_access/">Accessibility</a>
+          <a href="@/20_gui/">A Graphical User Interface</a>
+          <a href="@/21_graphics/">Dynamic Graphics</a>
+          <a href="@/22_intl/">Internationalization</a>
+          <a href="@/23_sessions/">Sessions</a>
+          <a href="@/24_cache/">Caching</a>
 	</span>
       </span>
       &middot;
       <span class="dropdown">
         <a href="#">Extras</a>
         <span class="dropdown-content">
-	  <a href="@root/license/">License</a>
-	  <a href="@root/conduct/">Code of Conduct</a>
-	  <a href="@root/bibliography/">Bibliography</a>
-	  <a href="@root/glossary/">Glossary</a>
-          <a href="@root/98_workflow/">Designing a Workflow</a>
-          <a href="@root/99_cert/">Certificates</a>
+          <a href="@/98_workflow/">Designing a Workflow</a>
+          <a href="@/99_cert/">Certificates</a>
+	  <a href="@/license/">License</a>
+	  <a href="@/conduct/">Code of Conduct</a>
+	  <a href="@/contrib/">Contributing</a>
+	  <a href="@/bibliography/">Bibliography</a>
+	  <a href="@/glossary/">Glossary</a>
         </span>
       </span>
     </nav>
@@ -57,9 +58,9 @@
 {{content}}
     </main>
     <footer>
-      <a href="@root/">The Webonomicon</a>
+      <a href="@/">The Webonomicon</a>
       copyright &copy; 2025
-      <a href="@root/01_intro/#acknowledgments">the authors</a>
+      <a href="@/01_intro/#acknowledgments">the authors</a>
     </footer>
   </body>
 </html>
