fixing lint errors

--- a/templates/page.html
+++ b/templates/page.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,7 +13,7 @@
       &middot;
       <span class="dropdown">
 	<a href="#">Lessons</a>
-	<span class="dropdown-content">
+	<span id="nav-lessons" class="dropdown-content">
           <a href="@/01_intro/">Introduction</a>
           <a href="@/02_htmlcss/">HTML and CSS</a>
           <a href="@/03_js/">An Hour of JavaScript</a>
@@ -43,7 +43,7 @@
       &middot;
       <span class="dropdown">
         <a href="#">Extras</a>
-        <span class="dropdown-content">
+        <span id="nav-extras" class="dropdown-content">
           <a href="@/98_workflow/">Designing a Workflow</a>
           <a href="@/99_cert/">Certificates</a>
 	  <a href="@/license/">License</a>
